[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[project]
name = "wow-test-project"
description = "wow test project"
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["eot*"]

[tool.setuptools.package-data]
"eot.test" = ["*.txt", "*.rst"]

[tool.setuptools-git-versioning]
enabled = true

