[build-system]
requires = [ "setuptools>=41", "setuptools_scm", "wheel" ]
build-backend = "_custom_build.local_backend"

[project]
name = "wow-test-project"
description = "wow test project"
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["eot*"]

[tool.setuptools_scm]

[tool.setuptools.package-data]
"eot.test" = ["*.txt", "*.rst"]



[tool.setuptools.dynamic]
version = {attr = "_custom_build.local_backend.__version__"}
